@@ -1,8 +1,8 @@
 /********************************************************************************************
  * pthread_setschedparam.c
  *
- *   Copyright (C) 2007, 2008 Gregory Nutt. All rights reserved.
- *   Author: Gregory Nutt <spudmonkey@racsa.co.cr>
+ *   Copyright (C) 2007, 2008, 2012 Gregory Nutt. All rights reserved.
+ *   Author: Gregory Nutt <gnutt@nuttx.org>
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -136,3 +136,4 @@ int pthread_setschedparam(pthread_t thread, int policy, FAR const struct sched_p
     }
   return ret;
  }
+
